Fixed solution-code-block width on mobile

--- a/src/components/CodeEditor/CodeEditorMobile/CodeEditorMobile.css
+++ b/src/components/CodeEditor/CodeEditorMobile/CodeEditorMobile.css
@@ -1,14 +1,15 @@
-.mobile-container {
-  /* min-height: 3000px; */
-}
-
 .mobile-container .sp-wrapper,
 .mobile-container .sp-layout,
 .mobile-container .sp-editor,
 .mobile-container .sp-file-explorer {
-  height: 100%;
+    height: 100%;
+    min-width: 100vw;
 }
 
 .mobile-container .challenge-description-window {
-  height: 600px;
+    height: 600px;
+}
+
+.split-vertical {
+    width: 100%;
 }
